<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GPS Tracker</string>
    <string name="default_upload_website">http://www.jantv.in/gps/updatelocation.php</string>

    <string name="tracking_is_off">Tracking is Off</string>
    <string name="tracking_is_on">Tracking is On</string>
    <string name="user_needs_to_restart_tracking">Please restart tracking to change the time interval.</string>
    <string name="reachability_error">Cannot reach the website that you have entered. Did you spell it correctly? Does your website use http or https?</string>
    <string name="textfields_empty_or_spaces">Please Enter Mobile No without space.</string>
    <string name="google_play_services_unavailable">Please go into Settings > Apps > All and enable Google Play Services.</string>
    <string name="user_name">Mobile Number</string>
    <string name="upload_website">upload website</string>
    <string name="upload_frequency">Send location after every:</string>
    <string name="one_minute">1 minute</string>
    <string name="five_minutes">5 minutes</string>
    <string name="fifteen_minutes">15 minutes</string>
</resources>
